2002-07-03  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* tty.cc (tty::common_init): Reverse logic of cygserver check in
	call to SetKernelObjectSecurity.

2002-07-03  Thomas Pfaff  <tpfaff@gmx.net>

	* autoload.cc (WSAEventSelect): Define new autoload function.
	(WSAEnumNetworkEvents): Ditto.
	* fhandler_socket.cc (fhandler_socket::accept): If socket is
	in blocking mode wait for incoming connection and signal.

2002-07-02  Christopher Faylor  <cgf@redhat.com>

	* cygheap.cc (init_cheap): Rearrange error message.
	(cygheap_fixup_in_child): Ditto.
	* dtable.cc: Remove if 0'ed code.
	* fhandler_dsp.cc (fhandler_dev_dsp::open): Force binmode.
	* sec_helper.cc (cygsid::get_id): Use system_printf for error message.
	* tty.cc (tty::common_init): Ditto.

2002-07-02  Christopher Faylor  <cgf@redhat.com>

	* net.cc (cygwin_getpeername): Defend against NULL pointer dereference.

2002-07-02  Egor Duda <deo@logos-m.ru>

	* include/cygwin/version.h: Bump API minor version.

2002-07-01  Pierre Humblet <pierre.humblet@ieee.org>

	* security.cc (get_logon_server): Interpret a zero length
	domain as the local domain.
	(get_group_sidlist): Add authenticated users SID to SYSTEM's group
	list instead of SYSTEM itself.
	(verify_token): Accept the primary group sid if it equals
	the token user sid.

2002-07-02  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din (__fpclassifyd): Add symbol.
	(__fpclassifyf): Ditto.
	(__signbitd): Ditto.
	(__signbitf): Ditto.

2002-07-02  Corinna Vinschen  <corinna@vinschen.de>

	* security.h (DONT_INHERIT): Eliminate definition.
	(INHERIT_ALL): Ditto.
	(INHERIT_ONLY): Ditto.
	* sec_acl.cc: Use appropriate defines from accctrl.h instead of the
	above throughout.
	* security.cc: Ditto.

2002-07-01  Pierre Humblet  <pierre.humblet@ieee.org>

	* syscalls.c (seteuid32): Return immediately if the program is not
	impersonated and both uid and gid are original.
	(setegid32): Return immediately if the new gid is the current egid.
